WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187253
[WK1] editing/spelling/markers.html is failing on recent builds of macOS Mojave
https://bugs.webkit.org/show_bug.cgi?id=187253
Summary
[WK1] editing/spelling/markers.html is failing on recent builds of macOS Mojave
Wenson Hsieh
Reported
2018-07-02 09:42:15 PDT
This started in recent builds of macOS Mojave. What appears to be happening is that the system spell checker is now returning both grammar and spelling results for the "I have a issue." portion of the test, and our test isn't robust enough to handle this.
Attachments
Patch
(29.67 KB, patch)
2018-07-02 13:17 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Patch for landing
(29.74 KB, patch)
2018-07-02 14:14 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2018-07-02 13:17:53 PDT
Created
attachment 344129
[details]
Patch
Tim Horton
Comment 2
2018-07-02 13:28:51 PDT
Comment on
attachment 344129
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=344129&action=review
> Tools/TestRunnerShared/cocoa/LayoutTestSpellChecker.mm:228 > + auto resultsObject = JSValueToObject(context, JSObjectGetPropertyAtIndex(context, resultsArray, resultIndex, nullptr), nullptr);
Someday we should make this use the modern ObjC JSC API.
Wenson Hsieh
Comment 3
2018-07-02 13:42:23 PDT
Comment on
attachment 344129
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=344129&action=review
>> Tools/TestRunnerShared/cocoa/LayoutTestSpellChecker.mm:228 >> + auto resultsObject = JSValueToObject(context, JSObjectGetPropertyAtIndex(context, resultsArray, resultIndex, nullptr), nullptr); > > Someday we should make this use the modern ObjC JSC API.
Sounds good! I'll refactor this the next time I touch add new functionality here, and add a FIXME to remind myself.
Wenson Hsieh
Comment 4
2018-07-02 14:14:47 PDT
Created
attachment 344135
[details]
Patch for landing
WebKit Commit Bot
Comment 5
2018-07-02 15:04:13 PDT
The commit-queue encountered the following flaky tests while processing
attachment 344135
[details]
: imported/blink/fast/events/click-focus-anchor-no-ring.html
bug 187275
(author:
jhoneycutt@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 6
2018-07-02 15:04:59 PDT
Comment on
attachment 344135
[details]
Patch for landing Clearing flags on attachment: 344135 Committed
r233439
: <
https://trac.webkit.org/changeset/233439
>
Radar WebKit Bug Importer
Comment 7
2018-07-02 15:45:24 PDT
<
rdar://problem/41745021
>
Truitt Savell
Comment 8
2018-07-05 08:47:46 PDT
It looks like once
r233439
was pushed and fixed the Mojave test, High Sierra began to have a flakey timeout. test history:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=editing%2Fspelling%2Fmarkers.html
Example of timeout:
https://build.webkit.org/builders/Apple%20High%20Sierra%20Release%20WK1%20(Tests)/builds/6423/steps/layout-test/logs/stdio
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug