[WK1] editing/spelling/markers.html is failing on recent builds of macOS Mojave https://bugs.webkit.org/show_bug.cgi?id=187253

Reviewed by Tim Horton.

Tools:

Enhances and refactors LayoutTestSpellChecker, which was introduced in r233412.

* DumpRenderTree/TestRunner.cpp:
(setSpellCheckerResultsCallback):

Rename setSpellCheckerTextReplacements to setSpellCheckerResults.

(TestRunner::staticFunctions):
(setSpellCheckerTextReplacementsCallback): Deleted.
* DumpRenderTree/TestRunner.h:
* DumpRenderTree/mac/TestRunnerMac.mm:
(TestRunner::setSpellCheckerResults):
(TestRunner::setSpellCheckerTextReplacements): Deleted.
* DumpRenderTree/win/TestRunnerWin.cpp:
(TestRunner::setSpellCheckerResults):
(TestRunner::setSpellCheckerTextReplacements): Deleted.
* TestRunnerShared/cocoa/LayoutTestSpellChecker.h:
* TestRunnerShared/cocoa/LayoutTestSpellChecker.mm:
(-[LayoutTestTextCheckingResult initWithType:range:replacement:details:]):
(-[LayoutTestTextCheckingResult grammarDetails]):
(-[LayoutTestSpellChecker reset]):
(-[LayoutTestSpellChecker results]):
(-[LayoutTestSpellChecker setResults:]):
(-[LayoutTestSpellChecker setResultsFromJSObject:inContext:]):

Add support for passing in a list of grammar correction detail ranges. Necessary for simulating grammar errors.

(-[LayoutTestSpellChecker checkString:range:types:options:inSpellDocumentWithTag:orthography:wordCount:]):

Tweaked to always call the superclass method. This ensures that we set the `orthography` and `wordCount`
outpointers if applicable.

(-[LayoutTestSpellChecker requestCheckingOfString:range:types:options:inSpellDocumentWithTag:completionHandler:]):

Added support for simulating asynchronous spell checking.

(-[LayoutTestTextCheckingResult initWithType:range:replacement:]): Deleted.
(-[LayoutTestSpellChecker replacements]): Deleted.
(-[LayoutTestSpellChecker setReplacements:]): Deleted.
(-[LayoutTestSpellChecker setReplacementsFromJSObject:inContext:]): Deleted.

LayoutTests:

In recent builds of macOS Mojave, NSSpellChecker returns both grammar and spelling errors when asked to analyze
the string "I have a issue.". While arguably correct, the change causes this existing layout test to fail due
to one of the calls to `verifyUnexpectedMarkers` expecting either grammar markers and not spelling markers, or
vice versa.

To fix this, we can leverage the mechanism added in r233412 to simulate different results from the platform
spellchecker, such that the test now exercises all combinations of grammar and spelling corrections observed on
each macOS platform, regardless of the actual platform where the test is being run.

This patch also enhances the capabilities of `LayoutTestSpellChecker`. See `Tools/ChangeLog` for more details.

* editing/spelling/markers-expected.txt:
* editing/spelling/markers.html:
* editing/spelling/text-replacement-after-typing-to-word.html:

Adjusted for a renamed TestRunner method.


Canonical link: https://commits.webkit.org/202524@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233439 268f45cc-cd09-0410-ab3c-d52691b4dbfc