Tools/TestRunnerShared/cocoa/LayoutTestSpellChecker.mm
@@ -29,8 +29,11 @@
 #import <JavaScriptCore/JSRetainPtr.h>
 #import <objc/runtime.h>
 #import <wtf/Assertions.h>
+#import <wtf/BlockPtr.h>
 
 #if PLATFORM(MAC)
+
+using TextCheckingCompletionHandler = void(^)(NSInteger, NSArray<NSTextCheckingResult *> *, NSOrthography *, NSInteger);
 
 static LayoutTestSpellChecker *globalSpellChecker = nil;
 static BOOL hasSwizzledLayoutTestSpellChecker = NO;
@@ -116,23 +119,30 @@ static NSTextCheckingType nsTextCheckingType(JSRetainPtr<JSStringRef>&& jsType)
     RetainPtr<NSString> _replacement;
     NSTextCheckingType _type;
     NSRange _range;
+    RetainPtr<NSArray<NSDictionary *>> _details;
 }
 
-- (instancetype)initWithType:(NSTextCheckingType)type range:(NSRange)range replacement:(NSString *)replacement;
+- (instancetype)initWithType:(NSTextCheckingType)type range:(NSRange)range replacement:(NSString *)replacement details:(NSArray<NSDictionary<NSString *, id> *> *)details;
 @end
 
 @implementation LayoutTestTextCheckingResult
 
-- (instancetype)initWithType:(NSTextCheckingType)type range:(NSRange)range replacement:(NSString *)replacement
+- (instancetype)initWithType:(NSTextCheckingType)type range:(NSRange)range replacement:(NSString *)replacement details:(NSArray<NSDictionary<NSString *, id> *> *)details
 {
     if (!(self = [super init]))
         return nil;
 
     _type = type;
     _range = range;
-    _replacement = replacement;
+    _replacement = adoptNS(replacement.copy);
+    _details = adoptNS(details.copy);
 
     return self;
+}
+
+- (NSArray<NSDictionary<NSString *, id> *> *)grammarDetails
+{
+    return _details.get();
 }
 
 - (NSRange)range
@@ -185,55 +195,80 @@ static NSTextCheckingType nsTextCheckingType(JSRetainPtr<JSStringRef>&& jsType)
 
 - (void)reset
 {
-    self.replacements = nil;
+    self.results = nil;
     self.spellCheckerLoggingEnabled = NO;
 }
 
-- (NSDictionary<NSString *, LayoutTestTextCheckingResult *> *)replacements
+- (TextCheckingResultsDictionary *)results
 {
-    return _replacements.get();
+    return _results.get();
 }
 
-- (void)setReplacements:(NSDictionary<NSString *, LayoutTestTextCheckingResult *> *)replacements
+- (void)setResults:(TextCheckingResultsDictionary *)results
 {
-    _replacements = adoptNS(replacements.copy);
+    _results = adoptNS(results.copy);
 }
 
-- (void)setReplacementsFromJSObject:(JSObjectRef)replacements inContext:(JSContextRef)context
+- (void)setResultsFromJSObject:(JSObjectRef)resultsObject inContext:(JSContextRef)context
 {
     auto fromPropertyName = adopt(JSStringCreateWithUTF8CString("from"));
     auto toPropertyName = adopt(JSStringCreateWithUTF8CString("to"));
     auto typePropertyName = adopt(JSStringCreateWithUTF8CString("type"));
     auto replacementPropertyName = adopt(JSStringCreateWithUTF8CString("replacement"));
-    auto properties = JSObjectCopyPropertyNames(context, replacements);
-    auto result = adoptNS([[NSMutableDictionary alloc] init]);
+    auto detailsPropertyName = adopt(JSStringCreateWithUTF8CString("details"));
+    auto results = adoptNS([[NSMutableDictionary alloc] init]);
+
+    // FIXME: Using the Objective-C API would make this logic easier to follow.
+    auto properties = JSObjectCopyPropertyNames(context, resultsObject);
     for (size_t index = 0; index < JSPropertyNameArrayGetCount(properties); ++index) {
-        JSStringRef wordToReplace = JSPropertyNameArrayGetNameAtIndex(properties, index);
-        JSObjectRef replacement = JSValueToObject(context, JSObjectGetProperty(context, replacements, wordToReplace, nullptr), nullptr);
-        long fromValue = lroundl(JSValueToNumber(context, JSObjectGetProperty(context, replacement, fromPropertyName.get(), nullptr), nullptr));
-        long toValue = lroundl(JSValueToNumber(context, JSObjectGetProperty(context, replacement, toPropertyName.get(), nullptr), nullptr));
-        auto typeValue = adopt(JSValueToStringCopy(context, JSObjectGetProperty(context, replacement, typePropertyName.get(), nullptr), nullptr));
-        auto replacementValue = JSObjectGetProperty(context, replacement, replacementPropertyName.get(), nullptr);
-        RetainPtr<CFStringRef> replacementText;
-        if (!JSValueIsUndefined(context, replacementValue)) {
-            auto replacementJSString = adopt(JSValueToStringCopy(context, replacementValue, nullptr));
-            replacementText = adoptCF(JSStringCopyCFString(kCFAllocatorDefault, replacementJSString.get()));
+        JSStringRef textToCheck = JSPropertyNameArrayGetNameAtIndex(properties, index);
+        JSObjectRef resultsArray = JSValueToObject(context, JSObjectGetProperty(context, resultsObject, textToCheck, nullptr), nullptr);
+        auto resultsArrayPropertyNames = JSObjectCopyPropertyNames(context, resultsArray);
+        auto resultsForWord = adoptNS([[NSMutableArray alloc] init]);
+        for (size_t resultIndex = 0; resultIndex < JSPropertyNameArrayGetCount(resultsArrayPropertyNames); ++resultIndex) {
+            auto resultsObject = JSValueToObject(context, JSObjectGetPropertyAtIndex(context, resultsArray, resultIndex, nullptr), nullptr);
+            long fromValue = lroundl(JSValueToNumber(context, JSObjectGetProperty(context, resultsObject, fromPropertyName.get(), nullptr), nullptr));
+            long toValue = lroundl(JSValueToNumber(context, JSObjectGetProperty(context, resultsObject, toPropertyName.get(), nullptr), nullptr));
+            auto typeValue = adopt(JSValueToStringCopy(context, JSObjectGetProperty(context, resultsObject, typePropertyName.get(), nullptr), nullptr));
+            auto replacementValue = JSObjectGetProperty(context, resultsObject, replacementPropertyName.get(), nullptr);
+            RetainPtr<CFStringRef> replacementText;
+            if (!JSValueIsUndefined(context, replacementValue)) {
+                auto replacementJSString = adopt(JSValueToStringCopy(context, replacementValue, nullptr));
+                replacementText = adoptCF(JSStringCopyCFString(kCFAllocatorDefault, replacementJSString.get()));
+            }
+            auto details = adoptNS([[NSMutableArray alloc] init]);
+            auto detailsValue = JSObjectGetProperty(context, resultsObject, detailsPropertyName.get(), nullptr);
+            if (!JSValueIsUndefined(context, detailsValue)) {
+                auto detailsObject = JSValueToObject(context, detailsValue, nullptr);
+                auto detailsObjectProperties = JSObjectCopyPropertyNames(context, detailsObject);
+                for (size_t detailIndex = 0; detailIndex < JSPropertyNameArrayGetCount(detailsObjectProperties); ++detailIndex) {
+                    auto detail = adoptNS([[NSMutableDictionary alloc] init]);
+                    auto detailObject = JSValueToObject(context, JSObjectGetPropertyAtIndex(context, detailsObject, detailIndex, nullptr), nullptr);
+                    long from = lroundl(JSValueToNumber(context, JSObjectGetProperty(context, detailObject, fromPropertyName.get(), nullptr), nullptr));
+                    long to = lroundl(JSValueToNumber(context, JSObjectGetProperty(context, detailObject, toPropertyName.get(), nullptr), nullptr));
+                    [detail setObject:[NSValue valueWithRange:NSMakeRange(from, to - from)] forKey:NSGrammarRange];
+                    [details addObject:detail.get()];
+                }
+                JSPropertyNameArrayRelease(detailsObjectProperties);
+            }
+            [resultsForWord addObject:[[[LayoutTestTextCheckingResult alloc] initWithType:nsTextCheckingType(WTFMove(typeValue)) range:NSMakeRange(fromValue, toValue - fromValue) replacement:(NSString *)replacementText.get() details:details.get()] autorelease]];
         }
-        auto spellCheckResult = adoptNS([[LayoutTestTextCheckingResult alloc] initWithType:nsTextCheckingType(WTFMove(typeValue)) range:NSMakeRange(fromValue, toValue - fromValue) replacement:(NSString *)replacementText.get()]);
-        auto cfWordToReplace = adoptCF(JSStringCopyCFString(kCFAllocatorDefault, wordToReplace));
-        [result setObject:spellCheckResult.get() forKey:(NSString *)cfWordToReplace.get()];
+        auto cfTextToCheck = adoptCF(JSStringCopyCFString(kCFAllocatorDefault, textToCheck));
+        [results setObject:resultsForWord.get() forKey:(NSString *)cfTextToCheck.get()];
+        JSPropertyNameArrayRelease(resultsArrayPropertyNames);
     }
     JSPropertyNameArrayRelease(properties);
 
-    _replacements = WTFMove(result);
+    _results = WTFMove(results);
 }
 
 - (NSArray<NSTextCheckingResult *> *)checkString:(NSString *)stringToCheck range:(NSRange)range types:(NSTextCheckingTypes)checkingTypes options:(NSDictionary<NSString *, id> *)options inSpellDocumentWithTag:(NSInteger)tag orthography:(NSOrthography **)orthography wordCount:(NSInteger *)wordCount
 {
-    if (auto *result = [_replacements objectForKey:stringToCheck])
-        return @[ result ];
+    NSArray *result = [super checkString:stringToCheck range:range types:checkingTypes options:options inSpellDocumentWithTag:tag orthography:orthography wordCount:wordCount];
+    if (auto *overrideResult = [_results objectForKey:stringToCheck])
+        return overrideResult;
 
-    return [super checkString:stringToCheck range:range types:checkingTypes options:options inSpellDocumentWithTag:tag orthography:orthography wordCount:wordCount];
+    return result;
 }
 
 - (void)recordResponse:(NSCorrectionResponse)response toCorrection:(NSString *)correction forWord:(NSString *)word language:(NSString *)language inSpellDocumentWithTag:(NSInteger)tag
@@ -242,6 +277,18 @@ static NSTextCheckingType nsTextCheckingType(JSRetainPtr<JSStringRef>&& jsType)
         printf("NSSpellChecker recordResponseToCorrection: %s -> %s (response: %s)\n", [word UTF8String], [correction UTF8String], stringForCorrectionResponse(response));
 
     [super recordResponse:response toCorrection:correction forWord:word language:language inSpellDocumentWithTag:tag];
+}
+
+- (NSInteger)requestCheckingOfString:(NSString *)stringToCheck range:(NSRange)range types:(NSTextCheckingTypes)checkingTypes options:(NSDictionary<NSString *, id> *)options inSpellDocumentWithTag:(NSInteger)tag completionHandler:(TextCheckingCompletionHandler)completionHandler
+{
+    return [super requestCheckingOfString:stringToCheck range:range types:checkingTypes options:options inSpellDocumentWithTag:tag completionHandler:[overrideResult = retainPtr([_results objectForKey:stringToCheck]), completion = makeBlockPtr(completionHandler), stringToCheck = retainPtr(stringToCheck)] (NSInteger sequenceNumber, NSArray<NSTextCheckingResult *> *result, NSOrthography *orthography, NSInteger wordCount) {
+        if (overrideResult) {
+            completion(sequenceNumber, overrideResult.get(), orthography, wordCount);
+            return;
+        }
+
+        completion(sequenceNumber, result, orthography, wordCount);
+    }];
 }
 
 @end
